# device-os-lab

./: .buildpackrc  .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Doxyfile  PULL_REQUEST_TEMPLATE.md  README.md  STYLE_GUIDE.md  bootloader.c  bootloader.h  logging.cpp  logging.h  main.cpp  makefile  module_data.cpp  module_data.h  system.h
.circleci/: config.yml
.workbench/: manifest.json
ci/: build.sh  cf_generate_message.sh  enumerate_build_matrix.sh  test_runner.sh
communication/: async.cpp  async.h  at_command_parser.c  at_command_parser.h  buffer_manager.cpp  buffer_manager.h  communication.c  communication.cpp  communication.h  crc.c  crc.h  network_manager.c  network_manager.h  retry_manager.cpp  retry_manager.h  test_crc.c  test_crc.cpp  test_uart.cpp  timeout_handler.cpp  timeout_handler.h  uart.c  uart.h
communication-dynalib/: communication_dynalib.cpp  communication_dynalib.h
crypto/: aes.c  aes.h  crypto.c  crypto.cpp  crypto.h  hash.c  hash.h  test_aes.c  test_aes.cpp  test_crypto.cpp
crypto-dynalib/: crypto_dynalib.c  crypto_dynalib.cpp  crypto_dynalib.h  dynalib.h
docs/: SECURITY.md  adc_calibration.md  api_reference.md  debugging.md  gettingstarted.md  gsm0710muxer.md  hal.md  hardware.md  linkerscripts.md  troubleshooting.md
gsm0710muxer/: frame_parser.c  frame_parser.h  gsm0710muxer.cpp  gsm0710muxer.h  muxer.c  muxer.h  test_muxer.cpp
hal/: build.mk  device.c  device_init.c  gpio.c  gpio.h  gpio_hal.c  gpio_hal.h  hal.cpp  hal.h  i2c_hal.c  i2c_hal.h  interrupt.c  interrupt.h  makefile  spi.c  spi.h  spi_driver.c  spi_driver.h  spi_hal.c  spi_hal.h  test_interrupt.c  test_interrupt.cpp  test_spi.c  test_spi.cpp  timer_hal.c  timer_hal.h  watchdog.c  watchdog.cpp  watchdog.h
hal_dynalib/: dynalib.h  hal_dynalib.cpp  hal_dynalib.h
main/: main.cpp  makefile
newlib_nano/: makefile
platform/: new_hardware.cpp  new_hardware.h  platform.c  platform.cpp  platform.h  reset.c  reset.h  test_reset.cpp
rt-dynalib/: makefile
scripts/: rtl872x.tcl  setup_hooks.sh
services/: data_handler.cpp  data_handler.h  logger.cpp  logger.h  services.cpp  services.h  test_data_handler.c  test_data_handler.cpp
system/: makefile  reset.c  reset.h  system-flags.md  system-versions.md  test_reset.c
system-dynalib/: system_dynalib.h
test/: test_hal.cpp  (+1 more)
test/unit_tests/system/: CMakeLists.txt
(+293 files in other folders)
